--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,15 @@
   </head>
   <body>
     <div class="main">
-      <form method = "POST" action="">
+      <form method = "POST">
         <label for="ccname">Name: </label>
-        <input type="text" class = "input"  name = "ccname" placeholder="card name" minlength="10" required>
+        <input type="text" name = "ccname" class = "input" placeholder="card name" minlength="10" required>
         <label for="ccname">Card Number: </label>
-        <input type="number" class = "input" name = "cardnumber" placeholder = "card number" required>
+        <input type="number" name = "cardnumber" class = "input" placeholder = "card number" required>
         <label for="cvc">Cvc: </label>
-        <input type="text" class = "input" name = "cvc" placeholder="cvc" required>
+        <input type="text" name = "cvc" class = "input"  placeholder="cvc" required>
         <label for="cc-exp">CC-exp: </label>
-        <input type="date" class = "input" name = "cc-exp" placeholder="date" required>
+        <input type="date" name = "cc-exp" class = "input"  placeholder="date" required>
         <button type = "submit">Submit</button>
 
       </form>
